--- a/catalog.html
+++ b/catalog.html
@@ -5,26 +5,39 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>HTML Academy: Каталог</title>
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
 	<header class="page-header" data-test="header">
 		<nav class="navigation">
-			<a class="navigation__logo-link" href="index.html"><img class="navigation__logo" src="" alt="Логотип «Седона»"></a>
+			<a class="navigation__logo-link" href="index.html"><img class="navigation__logo" src="images/logo/logo_sedona.svg" alt="Логотип «Седона»" width="140" height="70"></a>
 			<ul class="navigation__list">
 				<li class="navigation__item"> <a class="navigation__link" href="index.html">Главная</a> </li>
 				<li class="navigation__item"> <a class="navigation__link" href="#">О Седоне</a> </li>
 				<li class="navigation__item"> <a class="navigation__link  navigation__link--active-tab" href="catalog.html">Гостиницы</a> </li>
 			</ul>
-			<ul class="navigation__list navigation__user">
-				<li class="navigation__item">
-					<a class="navigation__link" href="#"> <span class="visually-hidden">Поиск</span> </a>
-				</li>
-				<li class="navigation__item">
-					<a class="navigation__link" href="#"> <span class="visually-hidden">Избранное</span> </a>
-				</li>
-				<li class="navigation__item"> <a class="navigation__link" href="#">Хочю сюда!</a> </li>
-			</ul>
+      <ul class="navigation__list navigation__user">
+        <li class="navigation__item">
+          <a class="navigation__link" href="#">
+            <span class="visually-hidden">Поиск</span>
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M19.5 18.0083L15.8 14.3287C16.8 13.0359 17.5 11.3453 17.5 9.4558C17.5 5.08011 13.9 1.5 9.5 1.5C5.1 1.5 1.5 5.17956 1.5 9.55525C1.5 13.9309 5.1 17.511 9.5 17.511C11.3 17.511 13 16.9144 14.4 15.8204L18.1 19.5L19.5 18.0083ZM9.5 15.5221C6.2 15.5221 3.5 12.837 3.5 9.55525C3.5 6.27348 6.2 3.5884 9.5 3.5884C12.8 3.5884 15.5 6.27348 15.5 9.55525C15.5 12.837 12.8 15.5221 9.5 15.5221Z" fill="black"/>
+            </svg>
+          </a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="#">
+            <span class="visually-hidden">Избранное</span>
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M9.9 19C9.6 19 9.3 18.9 9.1 18.6C3.7 12.5 2.4 11.1 2.1 10.7C1.4 9.8 1 8.6 1 7.4C1 4.4 3.4 2 6.5 2C7.8 2 9 2.5 10 3.3C11 2.5 12.3 2 13.5 2C16.5 2 19 4.4 19 7.4C19 8.7 18.5 9.9 17.7 10.8L10.7 18.7C10.5 18.9 10.3 19 9.9 19ZM3.9 9.5C4.2 9.9 7.4 13.5 10 16.4L16.2 9.4C16.7 8.9 16.9 8.2 16.9 7.4C16.9 5.6 15.4 4.1 13.6 4.1C12.6 4.1 11.6 4.6 10.9 5.4C10.6 5.7 10.3 5.8 10 5.8C9.7 5.8 9.4 5.6 9.2 5.4C8.5 4.6 7.5 4.1 6.5 4.1C4.7 4.1 3.2 5.6 3.2 7.4C3.1 8.3 3.5 9 3.9 9.5C3.8 9.5 3.8 9.5 3.9 9.5Z" fill="black"/>
+            </svg>
+          </a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="#">Хочю сюда!</a>
+        </li>
+      </ul>
 		</nav>
 	</header>
 	<main class="main-inner" data-test="main">
@@ -32,7 +45,7 @@
 			<h1 class="inner-header__title">Гостиницы Седоны</h1>
 			<ul class="breadcrumbs">
 				<li class="breadcrumbs__item">
-					<a class="breadcrumbs__link" href="index.html"> <img class="breadcrumbs__icon" src="" alt="Главная"></a>
+					<a class="breadcrumbs__link" href="index.html"> <img class="breadcrumbs__icon" src="images/icons/icon_home.svg" width="13" height="15" alt="Главная"></a>
 				</li>
 				<li class="breadcrumbs__item"> <a class="breadcrumbs__link" href="catalog.html">Каталог</a> </li>
 			</ul>
@@ -94,13 +107,22 @@
 					<option value="cheap">Сначала популярное</option>
 					<option value="expensive">Сначала дорогое</option>
 				</select>
-				<a href="#" class="catalog-products__button"> <span class="visually-hidden">Показать обычные карточки</span> </a>
-				<a href="#" class="catalog-products__button"> <span class="visually-hidden">Показать крупные карточки</span> </a>
-				<a href="#" class="catalog-products__button"> <span class="visually-hidden">Показать список</span> </a>
+				<a href="#" class="catalog-products__button">
+          <span class="visually-hidden">Показать обычные карточки</span>
+          <img src="images/icons/icon_medium.svg" width="48" height="48" alt="Показать обычные карточки">
+        </a>
+				<a href="#" class="catalog-products__button">
+          <span class="visually-hidden">Показать крупные карточки</span>
+          <img src="images/icons/icon_large.svg" width="48" height="48" alt="Показать крупные карточки">
+        </a>
+				<a href="#" class="catalog-products__button">
+          <span class="visually-hidden">Показать список</span>
+          <img src="images/icons/icon_list.svg" width="48" height="48" alt="Показать список">
+        </a>
 			</div>
-			<ul class="product-list">
+			<ol class="product-list">
 				<li class="product-card">
-					<a class="product-card__link" href="#"> <img class="product-card__image" src="" alt="Звёздное небо, вид из пещеры">
+					<a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/amara_resort_spa_300x212_2x.jpg" width="300" height="212" alt="Звёздное небо, вид из пещеры">
 						<h3 class="product-card__title">Amara Resort & Spa</h3> </a>
 					<div class="product-card__description"> <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 4000 ₽</span> </div>
 					<div class="product-card__button-container"> <a class="product-card__button product-card__button--primary" href="#">Подробнее</a>
@@ -112,7 +134,7 @@
 					</div>
 				</li>
 				<li class="product-card">
-					<a class="product-card__link" href="#"> <img class="product-card__image" src="" alt="Радуга над Гранд-Каньоном">
+					<a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/villas_at_poco_diablo_300x212_2x.jpg" width="300" height="212" alt="Радуга над Гранд-Каньоном">
 						<h3 class="product-card__title">Villas at Poco Diablo</h3> </a>
 					<div class="product-card__description"> <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 5000 ₽</span> </div>
 					<div class="product-card__button-container"> <a class="product-card__button product-card__button--primary" href="#">Подробнее</a>
@@ -124,7 +146,7 @@
 					</div>
 				</li>
 				<li class="product-card">
-					<a class="product-card__link" href="#"> <img class="product-card__image" src="" alt="Гранд-Каньон в ясную погоду">
+					<a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/desert_quail_inn_300x212_2x.jpg" width="300" height="212" alt="Гранд-Каньон в ясную погоду">
 						<h3 class="product-card__title">Desert Quail Inn</h3> </a>
 					<div class="product-card__description"> <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 2500 ₽</span> </div>
 					<div class="product-card__button-container"> <a class="product-card__button product-card__button--primary" href="#">Подробнее</a>
@@ -136,7 +158,7 @@
 					</div>
 				</li>
 				<li class="product-card">
-					<a class="product-card__link" href="#"> <img class="product-card__image" src="" alt="Свет над ночным небом Гранд=Каньона">
+					<a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/greentree_inn_300x212_2x.jpg" width="300" height="212" alt="Свет над ночным небом Гранд=Каньона">
 						<h3 class="product-card__title">GreenTree</h3> </a>
 					<div class="product-card__description"> <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 1500 ₽</span> </div>
 					<div class="product-card__button-container"> <a class="product-card__button product-card__button--primary" href="#">Подробнее</a>
@@ -147,7 +169,7 @@
 						<div class="product-card__rating">Рейтинг: <span class="product-card__rating-number">5,0</span></div>
 					</div>
 				</li>
-			</ul>
+			</ol>
 			<ul class="pagination">
 				<li class="pagination__item">
 					<a class="pagination__link pagination__prev pagination__disabled"> <span class="visually-hidden">Предыдущая страница</span> </a>
@@ -172,28 +194,48 @@
 			</form>
 		</section>
 	</main>
-	<footer class="footer" data-test="footer">
-		<section class="footer__social">
-			<h2 class="visually-hidden">Давайте дружить</h2>
-			<ul class="footer__social-list">
-				<li class="footer__social-item">
-					<a href="#" class="footer__button"> <span class="visually-hidden">ВКонтакте</span> </a>
-				</li>
-				<li class="footer__social-item">
-					<a href="#" class="footer__button"> <span class="visually-hidden">Телеграм</span> </a>
-				</li>
-				<li class="footer__social-item">
-					<a href="#" class="footer__button"> <span class="visually-hidden">Youtube</span> </a>
-				</li>
-			</ul>
-		</section>
-		<section class="footer__contacts">
-			<h2 class="visually-hidden">Контактный номер</h2>
+  <footer class="footer" data-test="footer">
+    <section class="footer__social">
+      <h2 class="visually-hidden">Давайте дружить</h2>
+      <ul class="footer__social-list">
+        <li class="footer__social-item">
+          <a href="#" class="footer__button">
+            <span class="visually-hidden">ВКонтакте</span>
+            <svg width="48" height="41" viewBox="0 0 48 41" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M35.1164 14.8044C35.2824 14.2584 35.1164 13.8564 34.3214 13.8564H31.6964C31.0284 13.8564 30.7204 14.2034 30.5534 14.5864C30.5534 14.5864 29.2184 17.7824 27.3274 19.8584C26.7154 20.4604 26.4374 20.6514 26.1034 20.6514C25.9364 20.6514 25.6854 20.4604 25.6854 19.9134V14.8044C25.6854 14.1484 25.5014 13.8564 24.9454 13.8564H20.8174C20.4004 13.8564 20.1494 14.1604 20.1494 14.4494C20.1494 15.0704 21.0954 15.2144 21.1924 16.9624V20.7604C21.1924 21.5934 21.0394 21.7444 20.7054 21.7444C19.8154 21.7444 17.6504 18.5334 16.3654 14.8594C16.1164 14.1444 15.8644 13.8564 15.1934 13.8564H12.5664C11.8164 13.8564 11.6664 14.2034 11.6664 14.5864C11.6664 15.2684 12.5564 18.6564 15.8114 23.1374C17.9814 26.1974 21.0364 27.8564 23.8194 27.8564C25.4884 27.8564 25.6944 27.4884 25.6944 26.8534V24.5404C25.6944 23.8034 25.8524 23.6564 26.3814 23.6564C26.7714 23.6564 27.4384 23.8484 28.9964 25.3234C30.7764 27.0724 31.0694 27.8564 32.0714 27.8564H34.6964C35.4464 27.8564 35.8224 27.4884 35.6064 26.7604C35.3684 26.0364 34.5184 24.9854 33.3914 23.7384C32.7794 23.0284 31.8614 22.2634 31.5824 21.8804C31.1934 21.3894 31.3044 21.1704 31.5824 20.7334C31.5824 20.7334 34.7824 16.3074 35.1154 14.8044H35.1164Z" fill="#83B3D3"/>
+            </svg>
+
+          </a>
+        </li>
+        <li class="footer__social-item">
+          <a href="#" class="footer__button">
+            <span class="visually-hidden">Телеграм</span>
+            <svg width="48" height="41" viewBox="0 0 48 41" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M31.785 12.9557L15.8405 19.1042C14.7523 19.5413 14.7586 20.1483 15.6408 20.419L19.7344 21.696L29.2058 15.7201C29.6537 15.4477 30.0629 15.5942 29.7265 15.8928L22.0528 22.8183H22.051L22.0528 22.8192L21.7705 27.0387C22.1841 27.0387 22.3667 26.8489 22.5987 26.625L24.5871 24.6915L28.7229 27.7464C29.4855 28.1664 30.0332 27.9506 30.2229 27.0405L32.9379 14.2453C33.2158 13.1311 32.5126 12.6266 31.785 12.9557Z" fill="#83B3D3"/>
+            </svg>
+
+          </a>
+        </li>
+        <li class="footer__social-item">
+          <a href="#" class="footer__button">
+            <span class="visually-hidden">Youtube</span>
+            <svg width="48" height="41" viewBox="0 0 48 41" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M31.9402 12.3564H16.5074C14.6467 12.3564 13.3333 13.9502 13.3333 15.7564V25.8502C13.3333 27.7627 14.6467 29.3564 16.5074 29.3564H32.1591C33.8009 29.3564 35.3333 27.7627 35.3333 25.9564V15.7564C35.1143 13.9502 33.8009 12.3564 31.9402 12.3564ZM20.9949 24.8939V16.8189L28.3283 20.8564L20.9949 24.8939Z" fill="#83B3D3"/>
+            </svg>
+
+          </a>
+        </li>
+      </ul>
+    </section>
+    <section class="footer__contacts">
+      <h2 class="visually-hidden">Контактный номер</h2>
       <p class="footer__hot-number"><a href="tel:+7(812) 812-12-12">+7(812) 812-12-12</a></p>
-		</section>
-		<section class="footer__production">
-			<h2 class="visually-hidden">Сделано в html academy</h2> <img class="footer__logo" src="" alt="html academy"> </section>
-	</footer>
+    </section>
+    <section class="footer__production">
+      <h2 class="visually-hidden">Сделано в html academy</h2>
+      <img class="footer__logo" src="images/logo/logo_htmlacademy.svg" alt="html academy" width="115" height="34">
+    </section>
+  </footer>
 </body>
 
 </html>
