--- a/catalog.html
+++ b/catalog.html
@@ -16,13 +16,19 @@
         </a>
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a class="navigation__link" href="index.html">Главная</a>
+            <a class="navigation__link" href="index.html">
+              <span class="navigation__label">Главная</span>
+            </a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="#">О Седоне</a>
+            <a class="navigation__link" href="#">
+              <span class="navigation__label">О Седоне</span>
+            </a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link navigation__link--active-tab" href="catalog.html">Гостиницы</a>
+            <a class="navigation__link  navigation__link--active-tab" href="catalog.html">
+              <span class="navigation__label">Гостиницы</span>
+            </a>
           </li>
         </ul>
 
@@ -123,7 +129,7 @@
             <option value="cheap">Сначала популярное</option>
             <option value="expensive">Сначала дорогое</option>
           </select>
-          <a href="#" class="catalog-products__button">
+          <a href="#" class="catalog-products__button catalog-products__button--active">
             <span class="visually-hidden">Показать обычные карточки</span>
             <svg width="16" height="14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4 0H0v6h4V0ZM16 0h-4v6h4V0ZM10 0H6v6h4V0ZM4 8H0v6h4V8ZM16 8h-4v6h4V8ZM10 8H6v6h4V8Z" fill="#000"/></svg>
           </a>
