--- a/index.html
+++ b/index.html
@@ -119,24 +119,40 @@
               <h3 class="search-hotels__popup-title">Поиск гостиницы в Седоне</h3>
               <div class="close-button">
                 <span class="visually-hidden">Закрыть</span>
-                <svg width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <circle cx="26" cy="26" r="26" fill="#F2F2F2"/>
-                  <path d="M33.4905 20.7829L32.1982 19.4906L26.4905 25.1983L20.7828 19.4906L19.4905 20.7829L25.1982 26.4906L19.4905 32.1983L20.7828 33.4906L26.4905 27.7829L32.1982 33.4906L33.4905 32.1983L27.7828 26.4906L33.4905 20.7829Z" fill="black"/>
+                <svg class="close-icon" width="52" height="52" viewBox="0 0 52 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <circle cx="26" cy="26" r="26" />
+                  <path d="M33.4905 20.7829L32.1982 19.4906L26.4905 25.1983L20.7828 19.4906L19.4905 20.7829L25.1982 26.4906L19.4905 32.1983L20.7828 33.4906L26.4905 27.7829L32.1982 33.4906L33.4905 32.1983L27.7828 26.4906L33.4905 20.7829Z"/>
                 </svg>
               </div>
               <form class="popup-form" action="https://echo.htmlacademy.ru/courses" method="post">
-                <label class="popup-control">Дата Заезда: <input type="date" id="start-date" name="start-date" value="2020-04-27"></label>
-                <p class="popup-error visually-hidden">Мы не можем отправить вас в прошлое.</p>
-                <label class="popup-control">Дата Выезда: <input type="date" id="end-date" name="end-date" value="2023-09-01"></label>
-                <p class="popup-allow visually-hidden">На эти даты есть свободные номера. Пока есть.</p>
-                <label>Взрослые: <input type="number" id="adult" name="adult" placeholder="2"></label>
-                <label>Дети:
+                <div class="popup__input-number-container">
+                  <label for="start-date" class="popup-control">Дата Заезда:</label>
+                  <input class="popup__input-number" type="date" id="start-date" name="start-date" value="2020-04-27">
+                  <p class="popup-error visually-hidden">Мы не можем отправить вас в прошлое.</p>
+                  <p class="popup-allow visually-hidden">На эти даты есть свободные номера. Пока есть.</p>
+                </div>
+                <div class="popup__input-number-container">
+                  <label for="end-date" class="popup-control">Дата Выезда:</label>
+                  <input class="popup__input-number" type="date" id="end-date" name="end-date" value="2023-09-01">
+                  <p class="popup-allow visually-hidden">На эти даты есть свободные номера. Пока есть.</p>
+                  <p class="popup-error visually-hidden">Мы не можем отправить вас в прошлое.</p>
+                </div>
+                <div class="popup__input-amount-container">
+                  <div class="popup__amount-row">
+                    <label for="adult"> Взрослые:</label>
+                    <input class="popup__input" type="number" id="adult" name="adult" placeholder="2">
+                  </div>
+                  <div class="popup__amount-row">
+                <label for="children">Дети:
                   <span class="popup-tooltip">
                     <img class="tooltip-img" src="images/icons/icon_info.svg" width="26" height="26" alt="tooltip">
                     <span class="tooltip-hidden-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.
                     </span>
-                  </span>
-                  <input type="number" id="children" name="children" placeholder="2"></label>
+                  </span></label>
+                  <input class="popup__input" type="number" id="children" name="children" placeholder="2">
+
+                  </div>
+                </div>
                 <button type="submit" id="popup-submit-button" class="button button--secondary button--popup-submit">Найти</button>
               </form>
             </div>
